--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@heroicons/react": "^1.0.6",
+    "@mui/material": "^5.8.7",
+    "firebase": "^9.9.0",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
+    "react-player": "^2.10.1",
+    "recoil": "^0.7.4",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
